[tool.poetry]
name = "slava-s-bank-fastapi"
version = "0.1.0"
description = ""
authors = ["Slava <slavik3001@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.5"}
pydantic_settings = "^2.7.1"
sqlalchemy = {extras = ["asincio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
